k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - dev.178.128.132.233.nip.io
    secretName: taskmanager-tls-dev
  rules:
  - host: dev.178.128.132.233.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-dev
            port: 
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-dev
            port:
              number: 80
